# sahasrahbot

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .vsls.json  CLAUDE.md  DESIGN.md  LICENSE  Pipfile  README.md  aerich.ini  alembic.ini  alttpr_doors_test.py  bonta_mw_host.py  bot.py  config.py  config.py.example  config_stub.py  copilot-instructions.md  create_customizer_preset.py  dbtest.py  discord_bot.py  pyproject.toml  requirements.txt  sahasrahbot.py  send_vods_to_s3.py  sonar-project.properties  srl_bot.py  update_docs.py
.claude/: settings.json  settings.local.json
.claude/hooks/: session-start.sh
.claude/scripts/: _hooklib.py  check_layer_exports.py  enforce_architecture.py  enforce_no_orm_writes.py
.github/: AGENTS.MD  copilot-instructions.md
.github/agent-modes/: component-interrogation.md
.github/workflows/: codeql-analysis.yml  lint.yml
alttprbot/: enums.py  exceptions.py  models.py  notes.txt  reactionrole.py  speedgaming.py  tables.py  tournaments.py
alttprbot/alttprgen/: bingosync.py  generator.py  mystery.py  preset.py  provider_adapters.py  provider_wrapper.py  random.py  smvaria.py  smz3multi.py  spoilers.py  weights.py
alttprbot/api/: app.py
alttprbot/cogs/: admin.py  alttprgen.py  audit.py  bontamw.py  daily.py  misc.py  moderation.py  nickname.py  role.py  smz3gen.py  srl.py  tournament.py  tourneyqualifier.py  voicerole.py
alttprbot/common/: base.py
alttprbot/database/: admin.py  alttprgen.py  audit.py  config.py  daily.py  discord_server_list.py  discord_server_lists.py  gtbk.py  league_playoffs.py  nick_verification.py  patch_distribution.py  permissions.py  racebot.py  role.py  sgdailies.py  sgl2020_tournament.py  sgl2020_tournament_bo3.py  smz3_multiworld.py  spoiler_races.py  srl_nick_verification.py  srl_races.py  srlnick.py  tournament_games.py  tournament_results.py  tournaments.py  twitch_channels.py  twitch_command_text.py  voicerole.py
alttprbot/models/: __init__.py  async_tournament.py  audit.py  guild.py  misc.py  models.py  presets.py  racetime.py  ranked_choice.py  schedule.py  tournament.py  users.py
alttprbot/presentation/: __init__.py
alttprbot/repositories/: __init__.py  async_tournament_audit_log_repository.py  async_tournament_live_race_repository.py  async_tournament_permissions_repository.py  async_tournament_repository.py  audit_generated_games_repository.py  audit_messages_repository.py  authorization_key_repository.py  daily_repository.py  discord_server_repository.py  guild_config_repository.py  inquiry_message_config_repository.py  konot_repository.py  multiworld_repository.py  nick_verification_repository.py  preset_namespace_repository.py  preset_repository.py  race_room_repository.py  racer_verification_repository.py  ranked_choice_repository.py  reaction_role_repository.py  scheduled_events_repository.py  spoiler_race_repository.py  tournament_games_repository.py  tournament_preset_history_repository.py  tournament_results_repository.py  triforce_text_repository.py  user_repository.py  verified_racer_repository.py  voice_role_repository.py
alttprbot/services/: __init__.py  async_tournament_live_race_service.py  async_tournament_permissions_service.py  async_tournament_scoring_service.py  async_tournament_service.py  audit_messages_service.py  audit_service.py  authorization_service.py  daily_service.py  discord_server_service.py  guild_config_service.py  holy_image_service.py  inquiry_message_config_service.py  konot_service.py  multiworld_service.py  nick_verification_service.py  preset_service.py  race_room_service.py  ranked_choice_service.py  (+10 more)
alttprbot_api/: WEB_OVERHAUL.md  api.py  auth.py  oauth_client.py
alttprbot_audit/: bot.py
alttprbot_discord/: bot.py
alttprbot_racetime/: bot.py  config.py  core.py  handler.py  handler_sgl.py  handler_smz3.py  tools.py
alttprbot_srl/: alt_hunter.py  bot.py  commands.py  discord_integration.py  nick_verifier.py  racebot.py  spoilers.py  util.py
alttprbot_twitch/: bot.py
config/: tournaments.yaml
database/: alttprbot_mysql.sql
docs/: Gemfile  MASTER_INDEX.md  _config.yml  architecture-layers.md  discord.md  index.md  mystery.md  mysteryyaml.md  presets.md  rtgg.md  srl.md
helpers/: alttpr2023.csv  check_dependency_declarations.py  convert_legacy_config_to_env.py  demo_tournament_registry.py  fix_alttprqual_data.py  migrate_env_to_settings.py  migrate_srlnick.sql  purge_old_telemetry.py  scan_config_constants.py  seed_test_fixtures.py  telemetry_report.py  validate_runtime_config.py  validate_tournament_config.py
migration/: env.py
migrations/: fix_collation_05232021.sql  tortoise_config.py
presets/: README.md  ambrosia.yaml  beginner.yaml  blitzmode.yaml  casual.yaml  casualboots.yaml  casualboots_fast.yaml  classic.yaml  crosskeys.yaml  dungeons.yaml  enemizer.yaml  festive_hard.yaml  inverted.yaml  keysanity.yaml  mc.yaml  mcs.yaml  mg.yaml  msutest.yaml  nologic.yaml  open.yaml  open_fast.yaml  open_fast_77.yaml  openboots.yaml  openboots_fast.yaml  openmajoritems.yaml  owg.yaml  owg_fast.yaml  owg_vt.yaml  retro.yaml  standardboots.yaml  standardmajoritems.yaml  swordless.yaml  trueicerodhunt.yaml
public/: index.html  srl.html
tests/: conftest.py  test_audit_service.py
utils/: dash.cli.js  dash.headless.mjs  flips
weights/: aqttp.yaml  bigjon.yaml  boots.yaml  chaos.yaml  daily.yaml  doors.yaml  festive.yaml  friendly.yaml  funweighted.yaml  grabbag.yaml  hmg.yaml  itemonly.yaml  ladder.yaml  ladder_entrance.yaml  ladder_item.yaml  ladder_ohko.yaml  ladder_season1.yaml  ladder_season11.yaml  ladder_season13.yaml  ladder_season2.yaml  ladder_season3.yaml  ladder_season4.yaml  ladder_season7.yaml  league.yaml  league_season2.yaml  league_season3_draft.yaml  mg.yaml  microfr2020.yaml  nologic.yaml  owg.yaml  pogchampion.yaml  pogchampion_noentrance.yaml  pogchampion_ohko.yaml  pogchampion_season2.yaml  pogchampion_season3.yaml  pogchampion_season5_entrance.yaml  pogchampion_season5_insanity.yaml  pogchampion_season5_normal.yaml  pogchampion_season5_randinventory.yaml  pogchampion_season5_timedohko.yaml  (+14 more)
(+909 files in other folders)
