[tool.aerich]
tortoise_orm = "migrations.tortoise_config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.poetry]
name = "sahasrahbot"
version = "0.1.0"
description = ""
authors = ["Thomas Prescott <tcprescott@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
quart = "*"
Quart-Discord = ">=2.1.4"
authlib = "*"
aerich = ">=0.5.5"
tortoise-orm = "*"
aioboto3 = ">=8.0.5"
aiocache = ">=0.11.1"
aiofiles = ">=0.4.0"
aiohttp = "*"
aiomysql = ">=0.0.20"
tenacity = "*"
discord-sentry-reporting = "*"
sentry-sdk = "*"
emoji = "*"
dataclasses-json = "*"
marshmallow = "*"
gspread-asyncio = "*"
gspread = "*"
PyYAML = "*"
html2markdown = "*"
beautifulsoup4 = "*"
urlextract = "*"
oauth2client = "*"
oauthlib = "*"
google-api-python-client = "*"
html5lib = "*"
shortuuid = "*"
python-slugify = "*"
pyz3r = "^6.0.7"
isodate = "*"
python-dateutil = "*"
pytz = "*"
werkzeug = "*"
"discord.py" = "*"
jishaku = "*"
pyrankvote = "*"
racetime-bot = {url = "https://github.com/tcprescott/racetime-bot/archive/48afdd4691f0f329eebb5dd33b1cbcf42921e980.zip"}
markdown = "^3.4.3"


[tool.poetry.group.dev.dependencies]
pycodestyle = "*"
pylint = "*"
autopep8 = "^2.0.1"
ipython = "^8.10.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
