[tool.aerich]
tortoise_orm = "migrations.tortoise_config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.poetry]
name = "sahasrahbot"
version = "0.1.0"
description = ""
authors = ["Thomas Prescott <tcprescott@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.19"
authlib = "^1.6"
aerich = ">=0.5.5"
tortoise-orm = "^0.21"
aioboto3 = ">=8.0.5"
aiocache = ">=0.11.1"
aiofiles = ">=0.4.0"
aiohttp = "^3.10"
aiomysql = ">=0.0.20"
tenacity = "*"
discord-sentry-reporting = "*"
sentry-sdk = "^2.18"
emoji = "*"
dataclasses-json = "*"
marshmallow = "*"
PyYAML = "^6.0"
html2markdown = "*"
beautifulsoup4 = "*"
urlextract = "*"
html5lib = "*"
shortuuid = "*"
python-slugify = "*"
pyz3r = "^6.0.7"
isodate = "*"
python-dateutil = "*"
pytz = "*"
werkzeug = "^3.1"
"discord.py" = "*"
jishaku = "*"
pyrankvote = "*"
racetime-bot = "^2.3.0"
websockets = "*"
markdown = "^3.4.3"
pydantic-settings = "*"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
pycodestyle = "*"
pylint = "*"
autopep8 = "^2.0.1"
ipython = "^8.10.0"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
import-linter = "*"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
# importlib mode lets nested test packages share basenames (e.g. several
# test_core.py) without colliding and without needing __init__.py files.
addopts = "--import-mode=importlib"

[tool.coverage.run]
source = ["alttprbot"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "helpers/*",
]

[tool.importlinter]
root_package = "alttprbot"
include_external_packages = "true"

# Contract 1 — the three-tier spine. Imports may only point downward.
[[tool.importlinter.contracts]]
name = "Three-tier layering"
type = "layers"
layers = [
    "alttprbot.presentation",
    "alttprbot.services",
    "alttprbot.repositories",
    "alttprbot.models",
]

# Contract 2 — the service and repository tiers must stay free of UI/transport
# libraries and of the presentation tier.
[[tool.importlinter.contracts]]
name = "Core tiers must not import UI or presentation"
type = "forbidden"
source_modules = [
    "alttprbot.services",
    "alttprbot.repositories",
]
forbidden_modules = [
    "discord",
    "racetime_bot",
    "quart",
    "alttprbot.presentation",
]
allow_indirect_imports = "false"

# Contract 3 — the presentation tier must reach data only through services.
# Enforced (blocking in CI) as of the final migration phase: the direct-model
# import burn-down is complete.
[[tool.importlinter.contracts]]
name = "Presentation must not import models directly"
type = "forbidden"
source_modules = [
    "alttprbot.presentation",
]
forbidden_modules = [
    "alttprbot.models",
]
# Direct-only: presentation may reach models transitively *through* services,
# but must not import alttprbot.models itself.
allow_indirect_imports = "true"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
